<resources>
    <string name="app_name">StarWarsApp</string>
    <string name="could_not_load_data">Could not load data</string>
    <string name="load_more">Load more</string>

    <string name="episode">Episode\u0020</string>
    <string name="director">Directed by:\u0020</string>
    <string name="producer">Produced by:\u0020</string>
    <string name="release_date">Release date:\u0020</string>

    <string name="gender">Gender:\u0020</string>
    <string name="birth_year">Birth year:\u0020</string>
    <string name="height_cm">Height: %s cm</string>
    <string name="mass_kg">Mass: %s kg</string>
    <string name="skin_color">Skin color:\u0020</string>
    <string name="hair_color">Hair color:\u0020</string>
    <string name="eye_color">Eye color:\u0020</string>

    <string name="classification">Classification:\u0020</string>
    <string name="designation">Designation:\u0020</string>
    <string name="homeworld">Homeworld:\u0020</string>
    <string name="language">Language:\u0020</string>
    <string name="average_life_span_years">Average lifespan: %s years</string>
    <string name="average_height_cm">Average height: %s cm</string>

    <string name="diameter_km">Diameter: %s km</string>
    <string name="rotation_period_hours">Rotation period: %s hours</string>
    <string name="orbital_period_hours">Orbital period: %s hours</string>
    <string name="gravity_g">Gravity: %s G</string>
    <string name="population">Population:\u0020</string>
    <string name="climate">Climate:\u0020</string>
    <string name="terrain">Terrain:\u0020</string>
    <string name="percentage_water">Percentage of water: %s%%</string>

    <string name="model">Model:\u0020</string>
    <string name="starship_class">Class:\u0020</string>
    <string name="manufacturer">Manufacturer:\u0020</string>
    <string name="cost">Cost: %s galactic credits</string>
    <string name="length_m">Length: %s m</string>
    <string name="crew">Crew:\u0020</string>
    <string name="passengers">Passengers:\u0020</string>
    <string name="max_speed">Max atmosphering speed: %s kph</string>
    <string name="hyperdrive_rating">Hyperdrive rating:\u0020</string>
    <string name="mglt">MGLT:\u0020</string>
    <string name="cargo_capacity">Cargo capacity: %s kg</string>
    <string name="consumables">Consumables:\u0020</string>

</resources>
