<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_planet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="Name" />

            <TextView
                android:id="@+id/tv_planet_diameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/diameter_km" />

            <TextView
                android:id="@+id/tv_planet_rotation_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/rotation_period_hours" />

            <TextView
                android:id="@+id/tv_planet_orbital_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/orbital_period_hours" />

            <TextView
                android:id="@+id/tv_planet_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/gravity_g" />

            <TextView
                android:id="@+id/tv_planet_population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/population" />

            <TextView
                android:id="@+id/tv_planet_climate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/climate" />

            <TextView
                android:id="@+id/tv_planet_terrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/terrain" />

            <TextView
                android:id="@+id/tv_planet_surface_water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/percentage_water" />
        </LinearLayout>
    </ScrollView>
</layout>