<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tv_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="Name Surname"/>

            <TextView
                android:id="@+id/tv_person_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/gender"/>

            <TextView
                android:id="@+id/tv_person_birth_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/birth_year"/>

            <TextView
                android:id="@+id/tv_person_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/height_cm"/>

            <TextView
                android:id="@+id/tv_person_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="@string/mass_kg"/>

            <TextView
                android:id="@+id/tv_person_skin_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/skin_color"/>

            <TextView
                android:id="@+id/tv_person_hair_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/hair_color"/>

            <TextView
                android:id="@+id/tv_person_eye_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/eye_color"/>

        </LinearLayout>
    </ScrollView>
</layout>